# BlackTelperion

./: .gitignore  README.md  pyproject.toml
BlackTelperion/: __init__.py  blackdata.py  blackfeature.py  blackheader.py  blackimage.py  blacklibrary.py  hyfeature.py
BlackTelperion/io/: headers.py  images.py  libraries.py
core/: image.py
io/: create_spectral_cubes.py
